--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "dev": "ts-node-dev --poll -r tsconfig-paths/register  src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
     "lint": "eslint 'src/**/*.{js,ts}' --quiet --fix",
     "prettier": "prettier --write 'src/**/*.{js,ts}'",
     "test": "vitest run",
@@ -18,16 +18,19 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.5",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
+    "compression": "^1.7.4",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -39,6 +42,6 @@
     "vitest": "^1.4.0"
   },
   "_moduleAliases": {
-    "@": "@/src"
+    "@": "dist"
   }
 }
