--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "_moduleAliases": {
+    "@": "dist"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "lint": "eslint 'src/**/*.{js,ts}' --quiet --fix",
     "prettier": "prettier --write 'src/**/*.{js,ts}'",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -36,12 +40,9 @@
     "eslint-plugin-prettier": "^5.1.3",
     "module-alias": "^2.2.3",
     "prettier": "^3.2.5",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.2",
     "typescript": "^5.4.4",
     "vitest": "^1.4.0"
-  },
-  "_moduleAliases": {
-    "@": "dist"
   }
 }
