--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc",
     "start": "node ./dist/index.js",
     "dev": "tsx watch src/index.ts",
+    "dev:debug": "tsx watch --inspect src/index.ts",
     "lint": "eslint 'src/**/*.{js,ts}' --quiet --fix",
     "prettier": "prettier --write 'src/**/*.{js,ts}'",
     "test": "vitest run",
