--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
